# rock-paper-scissors-mc

./: Cargo.toml  README.md
src/: game.rs  lib.rs
